<resources>

    /**********************NOMBRE APLICACION**********************/

    <string name="app_name">CampusCamaraFP</string>

    /**********************USUARIOS**********************/

    <string name="email">email</string>

    <string name="etpass">Contraseña</string>

    <string name="botoniniciar">Iniciar Sesión</string>

    <string name="registrarse">Registrarse</string>

    <string name="etnombre">Nombre</string>

    <string name="nombreyapellidos">Nombre y Apellidos</string>

    <string name="etapellidos">Apellidos</string>

    <string name="cursoSerial">Curso</string>

    <string name="primero">1ero</string>

    <string name="segundo">2do</string>

    <string name="boxalumno">Alumno/a</string>

    <string name="boxprofesor">Profesor/a</string>

    <string name="dni">DNI</string>

    /**********************REPASAR**********************/

    <string name="repasar">Repasar</string>

    <string name="aprender">Aprender</string>

    <string name="impartir">Impartir</string>

    <string name="queceder">¿Qué puedes ceder para el resto de alumnos?</string>

    <string name="ejemploimpartir">Ayudar con FOL o pasear al perro</string>

    <string name="tiempoimpartir">¿Cuánto tiempo tienes para emplear en la asignatura?</string>

    <string name="lugarimpartir">¿Dónde te gustaría quedar para ayudar?</string>

    <string name="diasemanaimpartir">Selecciona el día</string>

    <string name="hora">Escribe la hora</string>

    <string name="quedar">Quedar</string>

    /**********************PERFIL**********************/

    <string name="cambiarpass">Cambiar Contraseña</string>

    <string name="guardar">Guardar</string>

    <string name="guardarpass">Guardar Contraseña</string>

    <string name="passvieja">Escribe tu contraseña:</string>

    <string name="passnueva">Escribe tu nueva contraseña:</string>

    <string name="passnueva2">Repite la nueva contraseña:</string>

    <string name="verfaltas">Visualizar Faltas</string>

    /**********************FALTAS**********************/

    <string name="numfaltas">Faltas:</string>

    <string name="faltas">Faltas</string>

    <string name="dniprofe">Profesor/a:</string>

    <string name="diahora">Dia y Hora: </string>

    <string name="elegirdia">Seleccionar Día</string>

    /**********************AYUDAS**********************/

    <string name="tituloayuda">Ayuda</string>

    <string name="ayuda_iniciosesion"><b>Iniciar Sesión</b>\n\nDesde esta pestaña puedes iniciar sesión y registrarte\n\nPara poder registrarte tanto como profesor o como alumno,
        debes seleccionar el check box correspondiente.\nUna vez seleccionado el check box, puedes hacer click en registrarse y te llevará a la pestaña del registro.
        \n\nUna vez te has registrado ya puedes iniciar sesión con tus datos.</string>

    <string name="ayuda_impartir"><b>Impartir y Quedar</b>\n\nEsta pestaña es la perteneciente al Banco de Tiempo. Podemos apreciar dos botones.
        \n\nEl botón Impartir te lleva a una pestaña en la que como alumno, puedes elegir que asignatura, cuánto tiempo, el día y el lugar, puedes enseñar a otro alumno.
        De esta manera aparecerá una lista de los alumnos que imparten una asignatura.
        \n\nFinalmente, en el botón Quedar, debes seleccionar un elemento de la lista, en este caso la persona que quiere aprender sobre esa asignatura.
        Una vez seleccionado deberás enviarle un correo al alumno y hacer click en quedar para que se elimine de la lista.</string>

    <string name="ayuda_pasarlista"><b>Pasar Lista</b>\n\nEsta pestaña es la perteneciente a Pasar Lista, ideada para los profesores. Podemos apreciar un botón y una lista.
        \n\nEn la lista se cargan el nombre y apellidos de los alumnos del curso al que pertenece. En la derecha podemos ver que hay unas casillas que se marcarán
        en caso de que el alumno no haya asistido a clase.
        \n\nUna vez se ha pasado la lista y marcado a los alumnos que han faltado, pulsaremos el botón flotante guardar que hará insertar faltas a los alumnos.
        Esto nos sirve para contar la cantidad de faltas de cada alumno y más adelante hacer su porcentaje.</string>
</resources>