<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvImpartir"
        android:layout_width="362dp"
        android:layout_height="37dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:hint="@string/queceder" />

    <EditText
        android:id="@+id/etQueImpartir"
        android:layout_width="362dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/ejemploimpartir"
        android:inputType="textPersonName"
        android:textColor="@color/azul" />

    <TextView
        android:id="@+id/tvTiempoImpartir"
        android:layout_width="362dp"
        android:layout_height="37dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:hint="@string/tiempoimpartir" />

    <EditText
        android:id="@+id/etTiempoImpartir"
        android:layout_width="362dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="center"
        android:hint="2 horas"
        android:inputType="textPersonName"
        android:textColor="@color/azul" />

    <TextView
        android:id="@+id/tvLugar"
        android:layout_width="362dp"
        android:layout_height="37dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:hint="@string/lugarimpartir" />

    <Spinner
        android:id="@+id/spinnerLugarQuedar"
        android:layout_width="362dp"
        android:layout_height="49dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/tvDia"
        android:layout_width="106dp"
        android:layout_height="36dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:hint="@string/diasemanaimpartir" />

    <ImageView
        android:id="@+id/ivCalendario"
        android:layout_width="89dp"
        android:layout_height="85dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="20dp"
        android:onClick="etCalendario"
        app:srcCompat="@drawable/calendario" />

    <Button
        android:id="@+id/btnImpartirR"
        android:layout_width="155dp"
        android:layout_height="49dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:hint="@string/impartir"
        android:onClick="RegistrarImpartir"
        android:textColorHint="@color/white" />

    <TextView
        android:id="@+id/tvDiaSemanaU"
        android:layout_width="79dp"
        android:layout_height="19dp"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="-120dp"
        android:gravity="center"
        android:textColor="@color/azul" />

    <TextView
        android:id="@+id/tvHora"
        android:layout_width="102dp"
        android:layout_height="45dp"
        android:layout_marginStart="275dp"
        android:layout_marginLeft="275dp"
        android:layout_marginTop="-110dp"
        android:gravity="center"
        android:text="@string/hora" />

    <EditText
        android:id="@+id/etHoraU"
        android:layout_width="134dp"
        android:layout_height="39dp"
        android:layout_marginStart="255dp"
        android:layout_marginLeft="255dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:gravity="center"
        android:hint="17:00"
        android:inputType="textPersonName"
        android:textColor="@color/azul" />

</LinearLayout>