<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8E8E8"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".InicioSesion">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="259dp"
        android:layout_height="112dp"
        android:layout_marginTop="-120dp"
        app:srcCompat="@drawable/logo_campus" />

    <EditText
        android:id="@+id/etCorreoIS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:textColor="@color/linea_escribir"
        android:textColorHint="@color/linea_escribir" />

    <EditText
        android:id="@+id/etPasswordIS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:ems="10"
        android:hint="@string/etpass"
        android:inputType="textPassword"
        android:textColor="@color/linea_escribir"
        android:textColorHint="@color/linea_escribir" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginTop="40dp">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/rbAlumno"
                android:layout_width="205dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/boxalumno" />

            <RadioButton
                android:id="@+id/rbProfesor"
                android:layout_width="205dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/boxprofesor" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnIniciar"
            android:layout_width="160dp"
            android:layout_height="58dp"
            android:layout_marginTop="40dp"
            android:fontFamily="sans-serif-medium"
            android:onClick="Inicio"
            android:text="@string/botoniniciar"
            android:textColorHighlight="#FFFFFF"
            app:backgroundTint="@color/verde" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:clickable="true"
            android:hint="@string/registrarse"
            android:onClick="Registrar"
            android:textColorHint="@color/linea_escribir" />

    </LinearLayout>

</LinearLayout>