<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvPasswordAntigua"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="72dp"
        android:text="@string/passvieja" />

    <EditText
        android:id="@+id/etPasswordAntiguaAlum"
        android:layout_width="295dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/tvPasswordNueva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/passnueva" />

    <EditText
        android:id="@+id/etPasswordNuevaAlum"
        android:layout_width="295dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnGuardarPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="72dp"
        android:onClick="comprobarPassword"
        android:text="@string/guardarpass" />

</LinearLayout>