<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etNombreP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:ems="10"
        android:hint="@string/etnombre"
        android:inputType="textPersonName"
        android:textColor="@color/linea_escribir"
        android:textColorHint="@color/linea_escribir" />

    <EditText
        android:id="@+id/etApellidosP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:ems="10"
        android:hint="@string/etapellidos"
        android:inputType="textPersonName"
        android:textColor="@color/linea_escribir"
        android:textColorHint="@color/linea_escribir" />

    <EditText
        android:id="@+id/etCorreoRP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/linea_escribir"
        android:textColorHint="@color/linea_escribir" />

    <EditText
        android:id="@+id/etPasswordRP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:ems="10"
        android:hint="@string/etpass"
        android:inputType="textPassword"
        android:textColor="@color/linea_escribir"
        android:textColorHint="@color/linea_escribir" />

    <Spinner
        android:id="@+id/spinnerCursos2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        tools:layout_conversion_absoluteHeight="24dp"
        tools:layout_conversion_absoluteWidth="114dp"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="360dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnRegistrarseP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:gravity="center_vertical"
            android:onClick="registrarProfesores"
            android:text="@string/registrarse"
            android:textColor="@color/white"
            android:textColorHighlight="@color/linea_escribir"
            app:backgroundTint="@color/verde"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="126dp"
            tools:layout_editor_absoluteX="142dp"
            tools:layout_editor_absoluteY="520dp" />
    </LinearLayout>

</LinearLayout>