<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:ems="10"
        android:hint="@string/etnombre"
        android:inputType="textPersonName"
        android:textColor="@color/linea_escribir"
        android:textColorHint="@color/linea_escribir" />

    <EditText
        android:id="@+id/etApellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:ems="10"
        android:hint="@string/etapellidos"
        android:inputType="textPersonName"
        android:textColor="@color/linea_escribir"
        android:textColorHint="@color/linea_escribir" />

    <EditText
        android:id="@+id/etUsuarioR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:ems="10"
        android:hint="@string/etusu"
        android:inputType="textPersonName"
        android:textColor="@color/linea_escribir"
        android:textColorHint="@color/linea_escribir" />

    <EditText
        android:id="@+id/etPasswordR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:ems="10"
        android:hint="@string/etpass"
        android:inputType="textPassword"
        android:textColor="@color/linea_escribir"
        android:textColorHint="@color/linea_escribir" />

    <Spinner
        android:id="@+id/spinnerCursos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"/>

    <Button
        android:id="@+id/btnRegistrarse"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:gravity="center_vertical"
        android:hint="@string/registrarse" />

</LinearLayout>