<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="145dp"
        android:layout_height="120dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        app:srcCompat="@drawable/icono_profesor" />

    <TextView
        android:id="@+id/tvPerfilNombreNU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="50dp"
        android:layout_toEndOf="@+id/imageView2"
        android:layout_toRightOf="@+id/imageView2"
        android:text="@string/etnombre"
        android:textColor="@color/azul"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvPerfilNombreProfeU"
        android:layout_width="220dp"
        android:layout_height="25dp"
        android:layout_below="@+id/tvPerfilNombreNU"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="22dp"
        android:layout_toEndOf="@+id/imageView2"
        android:layout_toRightOf="@+id/imageView2"
        android:text="Pepito"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvPerfilApellidosNU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="43dp"
        android:text="@string/etapellidos"
        android:textColor="@color/azul"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tvPerfilApellidosProfeU"
        android:layout_width="260dp"
        android:layout_height="24dp"
        android:layout_below="@+id/tvPerfilApellidosNU"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="27dp"
        android:text="Zamora Pérez"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvPerfilCorreoNU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvPerfilApellidosProfeU"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="26dp"
        android:text="@string/email"
        android:textColor="@color/azul"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvPerfilCorreoProfeU"
        android:layout_width="376dp"
        android:layout_height="24dp"
        android:layout_below="@+id/tvPerfilCorreoNU"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="dzamora@campuscamarafp.com"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/tvPerfilDNINU2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvPerfilCorreoProfeU"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/dni"
        android:textColor="@color/azul"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvPerfilDNIProfeU"
        android:layout_width="260dp"
        android:layout_height="24dp"
        android:layout_below="@+id/tvPerfilDNINU2"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:text="dzamora@campuscamarafp.com"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnCambiarPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvPerfilDNIProfeU"
        android:layout_centerInParent="true"
        android:layout_marginTop="33dp"
        android:gravity="center"
        android:onClick="CambiarPassword"
        android:text="@string/cambiarpass" />

</RelativeLayout>